--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ github_repo: athena
 github_username: broccolini
 theme_color: black
 remote_theme: internet-de-france/swiss
-baseurl: /blog
+baseurl: /lucky_s_own_site
 defaults:
   - scope:
       path: ''
